--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,10 @@
   <title>Document</title>
 </head>
 <body>
-  <form class="form-inline input-form js-search-form">
-    <div class="form-group mx-sm-3 mb-2">
+  <form class="js-search-form">
+    <div >
       <label for="searchQuery" class="sr-only">Country</label>
-      <input
-      type="text"
-      class="form-control"
-      name="query"
-      id="searchQuery"
-      placeholder="Country"
-      autocomplete="off"
-      />
+      <input class="search" type="text" placeholder="country" id="name-input" />
     </div>
     
   </form>
